Try to fix left-align para margin.

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -83,6 +83,7 @@ p.small {
 
 p.left {
     text-align: left;
+    margin-left: 100px;
 }
 
 .instructions {
